# MarioGame

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  MarioGame.sln  MarioGame.vcxproj  README.md  build.bat  main.cpp  output.doc  packages.config  resource.rc
cmake/: CopyUIIfExists.cmake
content/configs/: animations.txt  scores.txt  sprites.txt  textures.txt
content/levels/: 2_3  2_4  level_1_1.csv  level_1_1_hidden - Copy.csv  level_1_1_hidden.csv  level_1_2_first_half.csv  level_1_2_hidden.csv  level_1_2_hidden_2.csv  level_1_2_second_half.csv  level_1_3.csv  level_1_4.csv  level_2_1.csv  level_2_1_hidden.csv  level_2_2.csv  level_2_2_hidden.csv  level_2_2_second_half.csv  level_2_3.csv  level_2_4.csv
docs/: Asset_ID_Convention.txt  ClassDiagram.md  NamingConvention.md  Workflow.md
docs/level/: level_1_1.csv  level_1_2_hidden.csv  level_1_2_hidden_2.csv  level_1_2_second_half.csv
engine/Graphics/: Animation.cpp  Animation.h  Animations.cpp  Animations.h  Sprite.cpp  Sprite.h  Sprites.cpp  Textures.cpp
engine/audio/: CAudioManager.cpp  CAudioManager.h
engine/core/: .gitkeep  CTimer.cpp  CTimer.h  Game.cpp  Game.h  GameLoop.cpp  GameLoop.h  GameObject.h  Time.cpp  Time.h  Window.cpp  Window.h
engine/input/: CInputManager.cpp  CInputManager.h  InputManager.cpp  InputManager.h  InputState.h  KeyboardManager.cpp  KeyboardManager.h
engine/physics/: CCollision.cpp  CCollision.h
engine/rendering/: Camera.cpp  Camera.h  Textures.cpp
engine/utils/: CScoreManager.cpp  CScoreManager.h  debug.cpp
game/entities/: CExtraEntities.cpp  CGameObject.h
game/entities/blocks/: CAxe.cpp  CAxe.h  CBlock.cpp  CBlock.h  CBrick.cpp  CBrick.h  CBrickDebris.h  CBridge.cpp  CBridge.h  CCastleBridge.h  CDecorBlock.cpp  CDecorBlock.h  CFlagpole.cpp  CFlagpole.h  CInvisibleBlock.h  CLava.h  CLuckyBlock.cpp  CLuckyBlock.h  CPipe.cpp  CPipe.h  CPlatform.h
game/entities/enemies/: CBlooper.cpp  CBlooper.h  CBowser.h  CBowserFireball.h  CCheepCheep.cpp  CCheepCheep.h  CFireBar.h  CGoomba.cpp  CGoomba.h  CKoopa.cpp  CKoopa.h  CPiranhaPlant.cpp  CPiranhaPlant.h  CPodoboo.h
game/entities/items/: CCoin.cpp  CCoin.h  CFireFlower.cpp  CFireFlower.h  CFireball.cpp  CFireball.h  CMushroom.cpp  CMushroom.h  CStar.cpp  CStar.h
game/entities/player/: CMario.cpp  CMario.h  Mario.cpp  Mario.h  MarioConfig.h
game/registry/: CMapLoader.cpp  CMapLoader.h  CResourceRegistry.cpp  CResourceRegistry.h
game/scenes/: CScene.h  CSceneManager.cpp  CSceneManager.h
game/scenes/play/: .gitkeep  CPlayScene.cpp  CPlayScene.h
scratch/content/levels/: level_2_3.csv
ui/: package-lock.json  package.json
ui/app/: globals.css  page.tsx
ui/app/components/: Sprite.tsx
ui/app/level-select/: page.tsx
